<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/activity_login" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@color/whitebackground" android:padding="3.0pt" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_alignParentLeft="true" android:layout_alignParentTop="true">
        <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:orientation="vertical" android:id="@id/LLogin" android:paddingTop="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:orientation="vertical" android:background="@drawable/background" android:padding="15.0pt" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:id="@+id/textView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="20.0dip" android:text="@string/login_With" android:layout_weight="1.0" />
                    <EditText android:textSize="20.0dip" android:textColor="#ff1a102c" android:id="@id/EDTUser" android:background="@android:drawable/editbox_background" android:paddingTop="9.0dip" android:paddingBottom="9.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:hint="@string/enter_family_email" android:ems="10" android:layout_weight="1.0" android:inputType="textEmailAddress" />
                    <EditText android:textSize="20.0dip" android:textColor="#ff1a102c" android:id="@+id/EDTpassword" android:background="@android:drawable/editbox_background" android:paddingTop="9.0dip" android:paddingBottom="9.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0pt" android:layout_marginBottom="10.0dip" android:hint="@string/enter_family_password" android:ems="10" android:layout_weight="1.0" android:inputType="textPassword" />
                    <Button android:textColor="#ff06071c" android:id="@+id/BuSaveSetting" android:background="@drawable/green_button" android:layout_width="fill_parent" android:layout_height="30.0pt" android:layout_margin="30.0dip" android:text="@string/login" android:layout_weight="1.0" android:onClick="BuLogin" />
                </LinearLayout>
                <LinearLayout android:orientation="vertical" android:background="@drawable/background" android:paddingLeft="30.0dip" android:paddingTop="20.0dip" android:paddingRight="30.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="3.0pt" android:layout_weight="1.0">
                    <Button android:textColor="#ff06071c" android:id="@+id/Bureg" android:background="@drawable/buttonblue" android:layout_width="fill_parent" android:layout_height="35.0pt" android:layout_marginRight="10.0dip" android:layout_marginBottom="10.0dip" android:text="@string/sign_up" android:layout_weight="1.0" android:onClick="BuRegister" />
                    <Button android:textColor="#ff06071c" android:id="@+id/buForget" android:background="@drawable/button_red" android:layout_width="fill_parent" android:layout_height="25.0pt" android:layout_marginTop="5.0pt" android:layout_marginRight="10.0dip" android:layout_marginBottom="10.0dip" android:text="@string/forget_password" android:layout_weight="1.0" android:onClick="BuForget" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>