<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/activity_orders_add" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@color/whitebackground" android:padding="3.0pt" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_alignParentLeft="true" android:layout_alignParentTop="true">
        <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:orientation="vertical" android:id="@id/LLogin" android:paddingTop="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:orientation="vertical" android:background="@drawable/background" android:padding="15.0pt" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:id="@id/textView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="20.0dip" android:text="@string/add_item" android:layout_weight="1.0" />
                    <EditText android:textSize="20.0dip" android:textColor="#ff1a102c" android:id="@+id/EDOrderName" android:background="@android:drawable/editbox_background" android:paddingTop="9.0dip" android:paddingBottom="9.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:hint="@string/enter_order_name" android:ems="10" android:layout_weight="1.0" android:inputType="textEmailAddress" />
                    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
                        <EditText android:textSize="20.0dip" android:textColor="#ff1a102c" android:id="@+id/EDPReferLocation" android:background="@android:drawable/editbox_background" android:paddingTop="9.0dip" android:paddingBottom="9.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0pt" android:layout_marginBottom="10.0dip" android:hint="@string/pick_location" android:ems="10" android:layout_weight="1.0" android:inputType="textPersonName" android:onClick="buGetLocation" />
                        <ImageView android:id="@+id/ivlocation" android:background="@drawable/ic_my_location_black_24dp" android:paddingLeft="10.0dip" android:layout_width="50.0dip" android:layout_height="50.0dip" android:layout_marginLeft="3.0pt" android:onClick="buGetLocation" />
                    </LinearLayout>
                    <Button android:textColor="#ff06071c" android:id="@id/BuSaveSetting" android:background="@drawable/green_button" android:layout_width="fill_parent" android:layout_height="30.0pt" android:layout_margin="30.0dip" android:text="@string/add_to_cart" android:layout_weight="1.0" android:onClick="BuAddCart" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>